--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dev-dependencies = [
     "ruff>=0.6.5",
     "tqdm>=4.66.5",
     "ipykernel>=6.29.5",
+    "scapy>=2.5.0",
 ]
 
 [tool.hatch.metadata]
