--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,18 @@
 [project]
 name = "p2pyrate"
 version = "0.1.0"
-description = "Add your description here"
+description = "BitTorrent client in pure python"
 authors = [
     { name = "Onésime BERNARD", email = "onesime.bernard@ima.it" }
 ]
 dependencies = [
-    "requests>=2.32.3",
-    "bencode-py>=4.0.0",
     "asyncudp>=0.11.0",
     "async-timeout>=4.0.3",
     "aiohttp>=3.10.5",
+    "bencode2>=0.2.4",
 ]
 readme = "README.md"
-requires-python = ">= 3.8"
+requires-python = ">= 3.10"
 
 [build-system]
 requires = ["hatchling"]
